--- a/JensensWebApp/Views/Home/Index.cshtml
+++ b/JensensWebApp/Views/Home/Index.cshtml
@@ -16,7 +16,10 @@
 };
 
 }
-
+<!DOCTYPE html>
+<html lang="en">
+<head></head>
+<body>
 <h1>Articles</h1>
 
 <div class="container">
@@ -57,3 +60,5 @@
         }
     </div>
 </div>
+</body>
+</html>
