--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -16,3 +16,47 @@ html {
 body {
   margin-bottom: 60px;
 }
+.container-navbar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+  background-color: #f5f5f5;
+  border: 1px solid black;
+}
+.navbar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid green;
+}
+.navbar-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.header-side-items {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.navbar-nav {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  list-style-type: none;
+  padding: 0;
+  margin-top: 10px;
+  border: 1px solid red;
+}
+.navbar-login {
+  margin-left: auto;
+}
+
+.headlin-logo {
+  align-self: center;
+}
