--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -60,3 +60,20 @@ body {
 .headlin-logo {
   align-self: center;
 }
+
+.searchbox {
+    position: absolute;
+    left: 0px;
+    margin-top:45px;
+    margin-left: 145px;
+    padding: 15px;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: #f5f5f5;
+}
+
+input[type=text] {
+    border-radius: 5px;
+    border: 1px solid black;
+    margin: 10px;
+}
