--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -23,19 +23,24 @@ body {
   padding: 10px;
   width: 100%;
   background-color: #f5f5f5;
-  border: 1px solid black;
+  
 }
 .navbar {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid green;
+  
 }
 .navbar-header {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
+}
+.nav-link {
+  font-size: 35px;
+  margin: 0 10px;
+  text-decoration: none;
 }
 
 .header-side-items {
@@ -51,7 +56,6 @@ body {
   list-style-type: none;
   padding: 0;
   margin-top: 10px;
-  border: 1px solid red;
 }
 .navbar-login {
   margin-left: auto;
@@ -69,7 +73,6 @@ body {
     padding: 15px;
     border: 1px solid black;
     border-radius: 10px;
-    background-color: #f5f5f5;
 }
 
 input[type=text] {
