--- a/JensensWebApp/Views/Home/Index.cshtml
+++ b/JensensWebApp/Views/Home/Index.cshtml
@@ -20,22 +20,28 @@
 <html lang="en">
 <head></head>
 <body>
-<h1>Articles</h1>
+    <main>
 
-    <div class="row mt-4">
-        @foreach (var article in Model)
-        {
-            <div class="col-md-6 col-lg-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">@article.Title</h5>
-                        <p class="card-text">@article.Summary</p>
-                        <a href="@article.Link" class="card-link" target="_blank">Read More</a>
-                        <p class="card-text"><small class="text-muted">@article.Published.ToString("yyyy-MM-dd HH:mm:ss")</small></p>
+        <section class="main__top-feed">
+            <h1>Articles</h1>
+            @foreach (var article in Model)
+            {
+                <div class="col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">@article.Title</h5>
+                            <p class="card-text">@article.Summary</p>
+                            <a href="@article.Link" class="card-link" target="_blank">Read More</a>
+                            <p class="card-text"><small class="text-muted">@article.Published.ToString("yyyy-MM-dd HH:mm:ss")</small></p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        }
-    </div>
+            }
+        </section>
+        <section class="main__bottom-feed">
+            <h5>Bottom feed</h5>
+        </section>
+    </main>
+
 </body>
 </html>
