--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -1,11 +1,41 @@
+header {grid-area: header}
+main {grid-area: main}
+aside.main__leftPanel {grid-area: leftPanel}
+section.main__top-feed {grid-area: top-feed}
+section.main__bottom-feed {grid-area: bottom-feed}
+footer {grid-area: footer}
+
+
+.main__top-feed{
+    margin-top:5px;
+}
+.header-side-items img{
+    height:50px;
+    width:auto;
+}
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
   html {
     font-size: 16px;
   }
+    body {
+        display: grid;
+        grid-template-columns: 4em auto 4em;
+    }
+}
+
+main {
+    display: grid;
+    grid-template-columns: min(20vw, 300px) auto;
+    grid-template-areas:
+        "leftPanel top-feed"
+        ". top-feed"
+        ". top-feed"
+        ". bottom-feed"
+        ". bottom-feed";
 }
 
 html {
@@ -14,7 +44,14 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    display: grid;
+    grid-template-columns: 0 auto 0;
+    grid-template-rows: minmax(120px, 20vh) auto 3.5em;
+    grid-template-areas:
+        "header header header"
+        ". main ."
+        "footer footer footer";
+    margin-bottom: 60px;
 }
 .container-navbar {
   display: flex;
@@ -23,7 +60,7 @@ body {
   padding: 10px;
   width: 100%;
   background-color: #f5f5f5;
-  
+  max-height:130px;
 }
 .navbar {
   display: flex;
@@ -38,7 +75,7 @@ body {
   width: 100%;
 }
 .nav-link {
-  font-size: 35px;
+  font-size: 20px;
   margin: 0 10px;
   text-decoration: none;
 }
@@ -67,13 +104,11 @@ body {
 
 .leftPanel {
     position: fixed;
-    left: 200px;
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    width:300px;
-    max-width:400px;
+    align-items: center;
+    min-width: 300px;
+    max-width: 400px;
     padding: 15px;
+    height:500px;
 }
 .searchBox {
     width:inherit;
@@ -89,12 +124,12 @@ body {
 }
 .adBox {
     width: inherit;
-    margin-top: 80px;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
 }
 .adBox img,video{
-    width:300px;
+    width:150px;
     height:auto;
     margin-bottom:20px;
 }
