--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
                             <img src="~/images/image2.jpg" alt="logo2" />
                     </div>
                     <div class="nav-head-right">
-                            <a asp-action="login" asp-controller="Account" class="navbar-login">Login</a>
-                            <img src="~/images/image3.jpg" alt="logo3" class="settings-logo" />
+                            <button class="login-button">Login</button>
+                            <img src="~/images/settingsbutton.png" alt="logo3" class="settings-logo" />
                     </div>
                 </div>
                 <div class="headlin-logo">
