--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -5,10 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - JensensWebApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/loginform.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/JensensWebApp.styles.css" asp-append-version="true" />
 </head>
 <body>
+    <div class="login-modal" id="login-modal">
+        <div class="login-container">
+            <header>Login</header>
+            <div class="form-outer">
+                <form action="#">
+                    <div class="page">                    
+                        <div class="field">
+                            <div class="label">Email</div>
+                            <input type="text" name="email" placeholder="Email" required>
+                            <div class="label">Password</div>
+                            <input type="password" name="password" placeholder="Password" required>
+                            <a href="#">Forgot Password?</a>
+                            <div class="field">
+                                <button>Login</button>
+                                <p>Don't have an account? <a href="#">Sign up now</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-navbar">
@@ -21,7 +44,7 @@
                             <img src="~/images/image2.jpg" alt="logo2" />
                     </div>
                     <div class="nav-head-right">
-                            <button class="login-button">Login</button>
+                            <button class="login-button" id="login-button">Login</button>
                             <img src="~/images/settingsbutton.png" alt="logo3" class="settings-logo" />
                     </div>
                 </div>
@@ -84,7 +107,7 @@
                 </div>
             </div>  
         </aside>
-
+            @RenderSection("LoginForm", required: false)
             @RenderBody()
     </main>
 
