--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -8,9 +8,10 @@ footer {grid-area: footer}
 
 .main__top-feed{
     margin-top:5px;
+    margin-left:10rem;
 }
 .header-side-items img{
-    height:50px;
+    height:3rem;
     width:auto;
 }
 html {
@@ -57,10 +58,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 1rem;
   width: 100%;
   background-color: #f5f5f5;
-  max-height:130px;
+  max-height:7.5rem;
 }
 .navbar {
   display: flex;
@@ -76,7 +77,7 @@ body {
 }
 .nav-link {
   font-size: 20px;
-  margin: 0 10px;
+  margin: 0 1rem;
   text-decoration: none;
 }
 
@@ -92,37 +93,41 @@ body {
   width: 100%;
   list-style-type: none;
   padding: 0;
-  margin-top: 10px;
+  margin-top: 1rem;
 }
 
 .leftPanel {
-    position: fixed;
+    position: sticky;
+    top: 3rem;
+    margin-left: 3rem;
     align-items: center;
-    min-width: 300px;
-    max-width: 400px;
-    padding: 15px;
-    height:500px;
+    min-width: 20rem;
+    max-width: 40rem;
+    padding: 1rem;
+    height: 100rem;
 }
 .searchBox {
     width:inherit;
     border: 1px solid black;
-    border-radius: 10px;
-    padding:0px 15px 15px 15px;
+    border-radius: 1rem;
+    padding:0px 1rem 1rem 1rem;
 }
 .searchBox input[type=text]{
     width: 75%;
 }
 .searchBox div{
-    margin:5px;
+    margin:0.1rem;
 }
 .adBox {
     width: inherit;
-    margin-top: 10px;
+    margin-top: 1rem;
     display: flex;
     flex-direction: column;
+    text-align:center;
+    height:100%;
 }
 .adBox img,video{
-    width:150px;
+    width:18rem;
     height:auto;
     margin-bottom:20px;
 }
