Fixed sticky searchbar/adwindow

--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -45,7 +45,9 @@
                     </div>
                     <div class="nav-head-right">
                             <button class="login-button" id="login-button">Login</button>
-                            <img src="~/images/settingsbutton.png" alt="logo3" class="settings-logo" />
+                            <button type="submit">
+                                <img src="~/images/settingsbutton.png" alt="logo3" class="settings-logo" />
+                            </button>
                     </div>
                 </div>
                 <div class="headlin-logo">
