--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -7,12 +7,18 @@ footer {grid-area: footer}
 
 
 .main__top-feed{
-    margin-top:5px;
     margin-left:10rem;
 }
-.header-side-items img{
-    height:3rem;
-    width:auto;
+.main__bottom-feed{
+    margin-left:10rem;
+}
+.header-side-items img {
+    height: 3rem;
+    width: auto;
+}
+.header-side-items button {
+    height: 3rem;
+    width: auto;
 }
 html {
     font-size: 14px;
@@ -33,10 +39,10 @@ main {
     grid-template-columns: min(20vw, 300px) auto;
     grid-template-areas:
         "leftPanel top-feed"
-        ". top-feed"
-        ". top-feed"
-        ". bottom-feed"
-        ". bottom-feed";
+        "leftPanel top-feed"
+        "leftPanel top-feed"
+        "leftPanel bottom-feed"
+        "leftPanel bottom-feed";
 }
 
 html {
@@ -52,7 +58,6 @@ body {
         "header header header"
         ". main ."
         "footer footer footer";
-    margin-bottom: 60px;
 }
 .container-navbar {
   display: flex;
@@ -61,7 +66,7 @@ body {
   padding: 1rem;
   width: 100%;
   background-color: #f5f5f5;
-  max-height:7.5rem;
+  max-height:8rem;
 }
 .navbar {
   display: flex;
@@ -98,13 +103,12 @@ body {
 
 .leftPanel {
     position: sticky;
-    top: 3rem;
+    top: 10rem;
     margin-left: 3rem;
     align-items: center;
     min-width: 20rem;
     max-width: 40rem;
     padding: 1rem;
-    height: 100rem;
 }
 .searchBox {
     width:inherit;
