--- a/JensensWebApp/Views/Home/Index.cshtml
+++ b/JensensWebApp/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
 }
         <section class="main__top-feed">
             <h1>Articles</h1>
+    <div class="New-card-layout">
             @foreach (var article in Model)
             {
                 <div class="col-md-6 col-lg-4 mb-4">
