--- a/JensensWebApp/Views/Home/Index.cshtml
+++ b/JensensWebApp/Views/Home/Index.cshtml
@@ -16,23 +16,19 @@
 };
 
 }
-        <section class="main__top-feed">
-            <h1>Articles</h1>
+<section class="main__top-feed">
+    <h1>Articles</h1>
     <div class="New-card-layout">
-            @foreach (var article in Model)
-            {
-                <div class="col-md-6 col-lg-4 mb-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">@article.Title</h5>
-                            <p class="card-text">@article.Summary</p>
-                            <a href="@article.Link" class="card-link" target="_blank">Read More</a>
-                            <p class="card-text"><small class="text-muted">@article.Published.ToString("yyyy-MM-dd HH:mm:ss")</small></p>
-                        </div>
-                    </div>
-                </div>
-            }
-        </section>
-        <section class="main__bottom-feed">
-            <h5>Bottom feed</h5>
-        </section>
+        @foreach (var article in Model)
+        {
+            <div class="New-card">
+                <h5>@article.Title</h5>
+                <p>@article.Summary</p>
+                <a href="@article.Link" target="_blank">Read More</a>
+                <p><small>@article.Published.ToString("yyyy-MM-dd HH:mm:ss")</small></p>
+            </div>
+        }
+    </div>
+    <button id="show-more">Show more</button>
+
+    <!--<button id="show-more-old">Show more</button>-->
