--- a/JensensWebApp/Views/Home/Index.cshtml
+++ b/JensensWebApp/Views/Home/Index.cshtml
@@ -30,5 +30,128 @@
         }
     </div>
     <button id="show-more">Show more</button>
+	<h1>Andra nyheter</h1>
 
-    <!--<button id="show-more-old">Show more</button>-->
+	<div class="Other-card-layout">
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+		<div class="Other-card">
+			<a href="">Read more</a>
+			<h5>Title</h5>
+			<p class="r">Published: 2023/06/23</p>
+		</div>
+	</div>
+    <button id="show-more-old">Show more</button>
