--- a/JensensWebApp/Views/Shared/_Layout.cshtml.css
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml.css
@@ -1,3 +1,12 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: black;
+    text-decoration: underline;
+}
