Flyttat Newscard css till egen fil

--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/loginform.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/JensensWebApp.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/NewsCard.css" asp-append-version="true" />
 </head>
 <body>
     <div class="login-modal" id="login-modal">
@@ -46,7 +47,6 @@
                     <div class="nav-head-right">
                             <button class="login-button" id="login-button">Login</button>
                             <button type="submit">
-                                <img src="~/images/settingsbutton.png" alt="logo3" class="settings-logo" />
                             </button>
                     </div>
                 </div>
