Fixed layout of cards and buttons lining up.

--- a/JensensWebApp/Views/Home/Index.cshtml
+++ b/JensensWebApp/Views/Home/Index.cshtml
@@ -30,6 +30,8 @@
         }
     </div>
     <button id="show-more">Visa mer</button>
+</section>
+<section class="main__bottom-feed">
 	<h1>Äldre nyheter</h1>
 
 	<div class="Other-card-layout">
@@ -155,3 +157,4 @@
 		</div>
 	</div>
     <button id="show-more-old">Visa mer</button>
+</section>
