--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -17,14 +17,14 @@
             <div class="navbar-header">
                 <div class="header-side-items">
                     <div class="nav-head-left">
-                            <img src="~/images/logoGrupp2.png" alt="logo1" class="small-logo" />
+                            <img src="~/images/logoGrupp2.png" alt="logo1" class="small-logo" style="width: 100px; height: 100px" />
                     </div>
                     <div class="nav-head-center">
-                            <img src="~/images/image2.jpg" alt="logo2" />
+                            <h1>Namn (logo inc)</h1>
                     </div>
                     <div class="nav-head-right">
                             <button class="login-button" id="login-button">Logga in</button>
-                            <img src="~/images/settingsbutton.png">
+                            <img src="~/images/settingGrupp2.png" alt="logo3" class="settings-logo" style="width: 40px; height: 40px" />
                     </div>
                 </div>
                 <div class="headlin-logo">
