--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -157,3 +157,25 @@ body {
     background-color: lightgrey;
     color: white;
 }
+#footer-main {
+    background-color: #f8f8f8;
+    border: solid 1px #333;
+    padding: 50px;
+    width: 100%;
+    margin-top: auto;
+}
+
+.footer-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: auto;
+    grid-gap: 10px;
+    margin: 0 auto;
+    max-width: 50%;
+    text-align: center;
+}
+
+.copyright-footer {
+    text-align: center;
+    margin-top: 50px;
+}
