--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
             <div class="navbar-header">
                 <div class="header-side-items">
                     <div class="nav-head-left">
+                            <div class="datetime" id="datetime"></div>
                     </div>
                     <div class="nav-head-center">
                             <img src="~/images/logoNameGrupp2.png" alt="logo1" class="settings-logo" />
