--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -5,18 +5,13 @@ section.main__top-feed {grid-area: top-feed}
 section.main__bottom-feed {grid-area: bottom-feed}
 footer {grid-area: footer}
 
-.datetime {
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-}
-
 .main__top-feed{
     margin-left:10rem;
     margin-bottom:2rem;
 }
 .main__bottom-feed{
     margin-left:10rem;
+    margin-bottom:2rem;
 }
 .header-side-items img {
     height: 3rem;
@@ -74,128 +69,4 @@ body {
         "header header header"
         ". main ."
         "footer footer footer";
-}
-.container-navbar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1rem;
-  width: 100%;
-  background-color: #f5f5f5;
-  max-height:8rem;
-}
-.navbar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  
-}
-.navbar-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-.nav-link {
-  font-size: 20px;
-  margin: 0 1rem;
-  text-decoration: none;
-}
-
-.header-side-items {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.navbar-nav {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  list-style-type: none;
-  padding: 15px;
-  margin-top: 1rem;
-}
-
-.nav-head-center img {
-  width: 40%;
-  height: auto;
-  justify-content: center;
-
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.nav-head-right img {
-  width: 30px;
-  height: auto;
-}
-
-.leftPanel {
-    position: sticky;
-    top: 10rem;
-    margin-left: 3rem;
-    align-items: center;
-    min-width: 20rem;
-    max-width: 40rem;
-    padding: 1rem;
-}
-.searchBox {
-    width:inherit;
-    border: 1px solid black;
-    border-radius: 1rem;
-    padding:0px 1rem 1rem 1rem;
-}
-.searchBox input[type=text]{
-    width: 75%;
-}
-.searchBox div{
-    margin:0.1rem;
-}
-.adBox {
-    width: inherit;
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    text-align:center;
-    height:100%;
-}
-.adBox img,video{
-    width:18rem;
-    height:auto;
-    margin-bottom:20px;
-}
-
-.searchBox input[type=text] {
-    border-radius: 5px;
-    border: 1px solid black;
-    margin: 10px;
-}
-
-#login-button:hover {
-    background-color: lightgrey;
-    color: white;
-}
-#footer-main {
-    background-color: #f8f8f8;
-    border: solid 1px #333;
-    padding: 50px;
-    width: 100%;
-    margin-top: auto;
-}
-
-.footer-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-auto-rows: auto;
-    grid-gap: 10px;
-    margin: 0 auto;
-    max-width: 50%;
-    text-align: center;
-}
-
-.copyright-footer {
-    text-align: center;
-    margin-top: 50px;
 }
