fixat buttons, förutom Sök-knappen i sökfältet.

--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
                 <h3>Tipsa oss</h3>
                 <ul>
                     <li><a href="#">0701234567</a></li>
-                    <li><a href="#">1234@nyhetskungen.se</a></li>
+                    <li><a href="#">1234@händelsehorisonten.se</a></li>
                 </ul>
             </section>
         </div>
