--- a/JensensWebApp/wwwroot/css/NewsCard.css
+++ b/JensensWebApp/wwwroot/css/NewsCard.css
@@ -49,6 +49,8 @@
 #show-more, #show-more-old {
     display: inline-block;
     border: 1px solid black;
+    border-radius: 0.3rem;
+    transition: background-color 0.3s ease;
     padding: 10px 30px;
     margin-top: 20px;
     margin-left:1rem;
@@ -56,12 +58,12 @@
 }
 
     #show-more:hover {
-        background-color: lightgrey;
+        background-color: black;
         color: white;
     }
 
     #show-more-old:hover {
-        background-color: lightgrey;
+        background-color: black;
         color: white;
     }
 
