--- a/JensensWebApp/wwwroot/css/navbar.css
+++ b/JensensWebApp/wwwroot/css/navbar.css
@@ -37,19 +37,11 @@
     height: auto;
 }
 .nav-head-right img {
-    width: 30px;
+    width: 3rem;
     height: auto;
 }
 .nav-link {
     font-size: 20px;
     margin: 0 1rem;
     text-decoration: none;
-}
-#login-button{
-    transition: background-color 0.3s ease;
-}
-#login-button:hover {
-    border-radius: 0.3rem   ;
-    background-color: black;
-    color: white;
 }
