--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar ">
             <div class="container-navbar">
                 <div class="navbar-header">
                     <div class="header-side-items">
@@ -34,7 +34,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -79,6 +78,10 @@
     <div class="options-modal" id="options-modal">
         <div class="options-container">
             <header>Inställningar</header>
+                                <div class="toggle-container">
+                        <input type="checkbox" id="toggle" />
+                        <label for="toggle" class="toggle-label"></label>
+                    </div>
             <div class="form-outer">
                 <form action="#">
                     <div class="page">
