--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <div class="datetime" id="datetime">@DateTime.Now.ToString("dd\\/MM\\/yyyy")</div>
                         </div>
                         <div class="nav-head-center">
-                            <img src="~/images/logoNameGrupp2.png" alt="logo1" class="settings-logo" />
+                            <img src="~/images/logoNameGrupp2.png" alt="logo1" class="headline-logo" />
                         </div>
                         <div class="nav-head-right">
                             <button class="login-button" id="login-button">Logga in</button>
@@ -34,19 +34,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="collapse navbar-collapse">
+                <div class="navbar-hyperlink">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link navbar-titles" href="#">Sport</a>
+                            <a class="nav-link" href="#">Sport</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-titles" href="#">Fritid</a>
+                            <a class="nav-link" href="#">Fritid</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-titles" href="#">Kultur</a>
+                            <a class="nav-link" href="#">Kultur</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link navbar-titles" href="#">Nöje</a>
+                            <a class="nav-link" href="#">Nöje</a>
                         </li>
                     </ul>
                </div>
