--- a/JensensWebApp/wwwroot/css/navbar.css
+++ b/JensensWebApp/wwwroot/css/navbar.css
@@ -1,4 +1,5 @@
-﻿.container-navbar {
+﻿/* Nav bar */
+.container-navbar {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,6 +25,7 @@
 }
 .navbar-nav {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     width: 100%;
     list-style-type: none;
@@ -39,8 +41,19 @@
     width: 3rem;
     height: auto;
 }
-.nav-link {
-    font-size: 20px;
-    margin: 0 1rem;
+.navbar-nav li {
+    padding: 0 1rem;
+}
+
+.navbar-nav li a {
+    color: black;
     text-decoration: none;
+    font-size: 1.5rem;
+    padding: 0 1rem;
+}
+
+.navbar-nav li a:hover {
+    color: black;
+    text-decoration: underline;
+    font-size: 1.5rem;
 }
