Dark mode Fixses

--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -24,12 +24,12 @@
                             <div class="datetime" id="datetime">@DateTime.Now.ToString("dd\\/MM\\/yyyy")</div>
                         </div>
                         <div class="nav-head-center">
-                            <img src="~/images/logoNameGrupp2.png" alt="logo1" class="settings-logo" />
+                            <img src="~/images/logoNameGrupp2.png" alt="logo1" id="settings-logo" />
                         </div>
                         <div class="nav-head-right">
                             <button class="login-button" id="login-button">Logga in</button>
                             <button id="options-button">
-                                <img src="~/images/settingGrupp2.png" alt="logo3" class="settings-logo" />
+                                <img src="~/images/settingGrupp2.png" alt="logo3" id="settings-logo" />
                             </button>
                         </div>
                     </div>
