--- a/JensensWebApp/wwwroot/css/leftpanel.css
+++ b/JensensWebApp/wwwroot/css/leftpanel.css
@@ -1,6 +1,6 @@
 ﻿.leftPanel {
     position: sticky;
-    top: 10rem;
+    top: 5rem;
     margin-left: 5rem;
     align-items: center;
     min-width: 20rem;
@@ -9,7 +9,7 @@
 
 .searchBox {
     width: inherit;
-    border: 1px solid black;
+    border: 1px solid;
     border-radius: 1rem;
     padding: 0px 1rem 1rem 1rem;
 }
