--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/css/leftpanel.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/footer.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/darkmode.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -29,7 +30,7 @@
                         <div class="nav-head-right">
                             <button class="login-button" id="login-button">Logga in</button>
                             <button id="options-button">
-                                <img src="~/images/settingGrupp2.png" alt="logo3" id="settings-logo" />
+                                <img src="~/images/settingGrupp2.png" alt="logo3"  class="permainv"/>
                             </button>
                         </div>
                     </div>
@@ -37,16 +38,16 @@
                 <div class="navbar-hyperlink">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a id="nav-link-Optinal" class="nav-link" href="#">Sport</a>
+                            <a id="nav-link-Optional" class="nav-link" href="#">Sport</a>
                         </li>
                         <li class="nav-item">
-                            <a id="nav-link-Optinal" class="nav-link" href="#">Fritid</a>
+                            <a id="nav-link-Optional" class="nav-link" href="#">Fritid</a>
                         </li>
                         <li class="nav-item">
-                            <a id="nav-link-Optinal" class="nav-link" href="#">Kultur</a>
+                            <a id="nav-link-Optional" class="nav-link" href="#">Kultur</a>
                         </li>
                         <li class="nav-item">
-                            <a id="nav-link-Optinal" class="nav-link" href="#">Nöje</a>
+                            <a id="nav-link-Optional" class="nav-link" href="#">Nöje</a>
                         </li>
                     </ul>
                </div>
@@ -135,25 +136,31 @@
 
     <footer id="footer-main">
         <div class="footer-grid">
-            <section class="footer-1">
-                <h3>Kontakta oss</h3>
+            <section class="footer">
                 <ul>
+                    <li>
+                        <h3>Kontakta oss</h3>
+                    </li>
                     <li><a href="#">Kundservice</a></li>
                     <li><a href="#">Karriär</a></li>
                     <li><a href="#">Investerare</a></li>
                 </ul>
             </section>
-            <section class="footer-2">
-                <h3>Information</h3>
+            <section class="footer">
                 <ul>
+                    <li>
+                        <h3>Information</h3>
+                    </li>
                     <li><a href="#">Om oss</a></li>
                     <li><a href="#">Personuppgiftspolicy</a></li>
                     <li><a href="#">Allmänna villkor</a></li>
                 </ul>
             </section>
-            <section class="footer-3">
-                <h3>Tipsa oss</h3>
+            <section class="footer">
                 <ul>
+                    <li>
+                        <h3>Tipsa oss</h3>
+                    </li>
                     <li><a href="#">0701234567</a></li>
                     <li><a href="#">1234@händelsehorisonten.se</a></li>
                 </ul>
