--- a/JensensWebApp/wwwroot/css/navbar.css
+++ b/JensensWebApp/wwwroot/css/navbar.css
@@ -46,7 +46,7 @@
 }
 
 .navbar-nav li a {
-    color: black;
+    color:inherit;
     text-decoration: none;
     font-size: 1.5rem;
     padding: 0 1rem;
@@ -56,19 +56,11 @@
     filter: invert(0%);
 }
 
-.dark-mode-logo{
-    filter: invert(100%);
-}
-
-.dark-mode-linknav {
-    color: whitesmoke;
-    text-decoration: none;
-    font-size: 1.5rem;
-    padding: 0 1rem;
-}
-
 .navbar-nav li a:hover {
-    color: black;
+    color: inherit;
     text-decoration: underline;
     font-size: 1.5rem;
+}
+.permainv{
+    filter:invert(1);
 }
