--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -28,7 +28,7 @@ html {
 }
 button {
     border-radius: 0.3rem;
-    border: 1px solid black;
+    border: 1px solid;
     transition: background-color 0.3s ease;
 }
 button:hover{
@@ -79,25 +79,16 @@ body {
     transition: background-color 0.3s ease;
 }
 
-a {
+a,li a {
     color: black;
     text-decoration: none;
   }
   
-  a:hover {
-    color: black;
+  a:hover,li a:hover {
+    color:black;
     text-decoration: underline;
   }
 
-
-.dark-mode a {
-    color: white;
-}
-
-.dark-mode {
-    background-color: #111;
-    color: #fff;
-}
 
 .toggle-container {
     position: relative;
